# system-config

./: .gitignore  .gitreview  .jshintrc  .zuul.yaml  AUTHORS  ChangeLog  Dockerfile  Gemfile  README.md  Rakefile  bindep.txt  bla.sh  build-image.sh  contrail-ci-todo.txt  gerrit-2.11-db-cleanup.sh  groups  hiera.yaml  infracloud-modules.env  install_jenkins_slave.sh  install_modules.sh  install_modules.yaml  install_puppet.sh  ls  make_puppet_lp.py  make_swap.sh  modules.env  montytest.yaml  mount_volume.sh  openstack-modules.env  pbcopy  project.config  roles.yaml  run-k8s-ansible.sh  run_all.sh  run_bifrost.sh  run_cloud_launcher.sh  run_infracloud.sh  run_k8s_ansible.sh  run_lint.sh  run_puppet.sh  (+15 more)
cloud_launcher/: clouds_layouts.yml  tripleo-test-cloud.yaml
doc/: conf.py  gerrit.rst  index.rst  jenkins_jobs.rst  meetbot.rst  puppet.rst  puppet_modules.rst  requirements.txt  stackforge.rst  systems.rst
gerrit/: setup.sh
hiera/: common.yaml
inventory/: groups.yaml  openstack.yaml
kubernetes/: README.md  ansible.cfg  destroy.yaml  env.sh  export-percona-helm.sh  gitea.yaml  mariadb-pv.yaml  mariadb-secret.yaml  mariadb.yaml  run.sh  site.yaml  storage-class.yaml  upgrade.yaml
launch/: README  dns.py  launch-node-ansible.py  launch-node.py  shade-launch-node.py  sshclient.py  utils.py
manifests/: burrow.pp  burrow_java.pp  dashboard.pp  docs.pp  glance.pp  infracloud.pp  keystone.pp  libburrow.pp  nova.pp  openstack.pp  openstack_admins_users.pp  openstack_ci_admins_users.pp  ppa.pp  server.pp  site.pp  slave.pp  stackforge.pp  static_users.pp  swift.pp  users.pp
playbooks/: allow_all_traffic_default_secgroup.yml  apply-package-updates.yaml  ara_web_server.yaml  attended_upgrades.yml  base.yaml  bind-master.yaml  bootstrap-k8s-nodes.yaml  bootstrap_puppet.yml  bridge.yaml  clean_workspaces.yaml  cleanup-exim-paniclog.yaml  clouds_layouts.yml  configure-openstack.yaml  copy_hiera.yml  create_openstack_keypair.yml  (+55 more)
(+3490 files in other folders)
