[metadata]
name = opencontrail-infra-config
summary = OpenContrail Infrastructure Config
description-file =
    README.md
author = OpenContrail Infrastructure Team
author-email = opencontrail-infra@lists.opencontrail.org
home-page = http://ci.opencontrail.org/
classifier =
    Environment :: OpenContrail
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
