[metadata]
name = openstack-infra-config
summary = OpenStack Infrastructure Config
description-file =
    README.md
author = OpenStack Infrastructure Team
author-email = openstack-infra@lists.openstack.org
home-page = http://ci.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = true
